--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mothership Defender 2 - Homepage von Nils</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="/Nalsai.GitHub.io/js/jquery-3.3.1.min.js"></script>
+    <script src="/Nalsai.GitHub.io/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/Nalsai.GitHub.io/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Nalsai.GitHub.io/css/logos.css">
     <script src="WebGL_App/UnityLoader.js"></script>
     <script>var gameInstance = UnityLoader.instantiate("gameContainer", "WebGL_App/WebGL_App.json");</script>
 </head>
@@ -45,18 +45,26 @@
     </section>
     <br>
     <br>
+    <br>
+    <br>
     <footer class="bg-dark text-white mt-4">
         <div class="container-fluid py-3">
             <div class="row">
-                <div class="col-md-3">
-                    <h5>Footer</h5>
-                </div>
+                <div class="col-md-3"></div>
                 <div class="col-md-3"></div>
                 <div class="col-md-3"></div>
                 <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-6">I stay at the bottom of the viewport! <span class="small"><br>Unless the page content pushes me further.</span></div>
+                <div class="col-md-6">
+                    &nbsp;<a class="logozoom" href="https://github.com/Nalsai"><img class="logo" src="/Nalsai.GitHub.io/Bilder/GitHub_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="http://steamcommunity.com/id/nalsai/"><img class="logo" src="/Nalsai.GitHub.io/Bilder/Steam_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="http://live.xbox.com/de-DE/Profile?gamertag=Nils IV"><img class="logo" src="/Nalsai.GitHub.io/Bilder/Xbox_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="https://osu.ppy.sh/u/11766906"><img class="logo" src="/Nalsai.GitHub.io/Bilder/Osu!_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="https://myanimelist.net/profile/Nalsai"><img class="logo" src="/Nalsai.GitHub.io/Bilder/MAL_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="https://www.youtube.com/channel/UC-wQRakfwvTqrgPBF0_h_BQ"><img class="logo" src="/Nalsai.GitHub.io/Bilder/YouTube_Logo.png"></a>
+                    &nbsp;&nbsp;<a class="logozoom" href="https://www.amazon.de/hz/wishlist/ls/1SBKLNVR41QIR"><img class="logo" src="/Nalsai.GitHub.io/Bilder/Amazon_Logo.png"></a>
+                </div>
                 <div class="col-md-3"></div>
                 <div class="col-md-3 text-right small align-self-end">2018 Nils Fürniß</div>
             </div>
