--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mothership Defender 2 - Homepage von Nils</title>
-  <script src="/Nalsai.GitHub.io/js/jquery-3.3.1.min.js"></script>
-  <script src="/Nalsai.GitHub.io/js/bootstrap.min.js"></script>
-  <script src="/Nalsai.GitHub.io/js/gtag.js"></script>
-  <link rel="stylesheet" href="/Nalsai.GitHub.io/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/Nalsai.GitHub.io/css/logos.css" />
+  <script src="../Nalsai.GitHub.io/js/jquery-3.3.1.min.js"></script>
+  <script src="../Nalsai.GitHub.io/js/bootstrap.min.js"></script>
+  <script src="../Nalsai.GitHub.io/js/gtag.js"></script>
+  <link rel="stylesheet" href="../Nalsai.GitHub.io/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../Nalsai.GitHub.io/css/logos.css" />
   <link rel="stylesheet" href="TemplateData/style.css" />
   <script src="TemplateData/UnityProgress.js"></script>
   <script src="Build/UnityLoader.js"></script>
@@ -18,23 +18,23 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-sm bg-light navbar-light">
-    <a href="/Nalsai.GitHub.io/index.html" class="navbar-brand">Homepage von Nils</a>
+    <a href="../Nalsai.GitHub.io/index.html" class="navbar-brand">Homepage von Nils</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse" id="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/Nalsai.GitHub.io/index.html">Start</a>
+          <a class="nav-link" href="../Nalsai.GitHub.io/index.html">Start</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/ImgReName/index.html">ImgReName</a>
+          <a class="nav-link" href="../ImgReName/index.html">ImgReName</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/MothershipDefender/index.html">Mothership Defender</a>
+          <a class="nav-link" href="../MothershipDefender/index.html">Mothership Defender</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/MothershipDefender2/index.html">Mothership Defender 2</a>
+          <a class="nav-link" href="../MothershipDefender2/index.html">Mothership Defender 2</a>
         </li>
       </ul>
     </div>
@@ -84,7 +84,7 @@
   <br>
   <br>
   <br>
-  <script language="javascript" type="text/javascript" src="/Nalsai.GitHub.io/Objects/footer.js"></script>
+  <script language="javascript" type="text/javascript" src="../Nalsai.GitHub.io/Objects/footer.js"></script>
 </body>
 
 </html>
