--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mothership Defender 2 - Homepage von Nils</title>
-  <script src="../Nalsai.GitHub.io/js/jquery-3.3.1.min.js"></script>
-  <script src="../Nalsai.GitHub.io/js/bootstrap.min.js"></script>
-  <script src="../Nalsai.GitHub.io/js/gtag.js"></script>
-  <link rel="stylesheet" href="../Nalsai.GitHub.io/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../Nalsai.GitHub.io/css/logos.css" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115391497-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-115391497-1');
+  </script>
+  <script src="/Nalsai.GitHub.io/js/jquery-3.3.1.min.js"></script>
+  <script src="/Nalsai.GitHub.io/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/Nalsai.GitHub.io/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/Nalsai.GitHub.io/css/logos.css" />
   <link rel="stylesheet" href="TemplateData/style.css" />
   <script src="TemplateData/UnityProgress.js"></script>
   <script src="Build/UnityLoader.js"></script>
